# RabbitToMongo

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  mongowriter.cpp  mongowriter.h  rabbitreader.cpp  reader.hpp  utils.c  utils.h
